// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > renders WithBottom story and AppBar.Bottom is always on a new line 1`] = `
<div>
  <header
    class="w-full flex flex-wrap items-center px-4 py-3 gap-2 bg-white [&>[data-versaur-appbar-bottom]]:basis-full [&>[data-versaur-appbar-bottom]]:w-full"
    role="banner"
  >
    <div
      class="flex items-center"
    >
      <button
        aria-disabled="false"
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none text-foreground bg-white hover:bg-neutral/70 focus-visible:ring-foreground-soft focus-visible:ring-offset-white h-12 w-12 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left inline-flex items-center justify-center w-6 h-6 text-ghost"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-center min-w-0 flex-grow items-start"
    >
      <div
        class="font-semibold text-lg truncate min-w-0"
      >
        Anywhere Demo
      </div>
      <div
        class="text-xs text-slate-400 truncate min-w-0"
      >
        AppBar.Bottom can be anywhere
      </div>
    </div>
    <div
      class="flex items-center justify-end gap-2"
    >
      <button
        aria-disabled="false"
        aria-label="Print"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-8 w-8 rounded-full"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-printer inline-flex items-center justify-center w-4 h-4 text-neutral"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"
          />
          <rect
            height="8"
            rx="1"
            width="12"
            x="6"
            y="14"
          />
        </svg>
      </button>
    </div>
    <div
      class="w-full flex items-center min-h-[2.5rem] mt-2"
      data-versaur-appbar-bottom="true"
    >
      <div
        class="flex flex-row w-full overflow-x-auto whitespace-nowrap border-b border-border"
        role="tablist"
        style="position: relative;"
      >
        <button
          aria-controls="tabs-content-detail"
          aria-selected="false"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-base relative font-normal bg-transparent border-b-2 border-transparent text-foreground hover:text-coral"
          id="tabs-trigger-detail"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Details
        </button>
        <button
          aria-controls="tabs-content-entries"
          aria-selected="true"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-base relative font-medium bg-transparent border-b-2 text-coral border-coral"
          id="tabs-trigger-entries"
          role="tab"
          tabindex="0"
          type="button"
        >
          Entries
        </button>
        <div
          aria-hidden="true"
          class="absolute bottom-0 h-0.5 rounded transition-all duration-300 bg-coral"
          style="left: 0px; width: 0px; pointer-events: none;"
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBar > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <header
    class="w-full flex flex-wrap items-center px-4 py-3 gap-2 bg-white [&>[data-versaur-appbar-bottom]]:basis-full [&>[data-versaur-appbar-bottom]]:w-full"
    role="banner"
  >
    <div
      class="flex items-center"
    >
      <button
        aria-disabled="false"
        aria-label="Open navigation"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none text-foreground bg-white hover:bg-neutral/70 focus-visible:ring-foreground-soft focus-visible:ring-offset-white h-12 w-12 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left inline-flex items-center justify-center w-6 h-6 text-ghost"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-center min-w-0 flex-grow items-start"
    >
      <div
        class="font-semibold text-lg truncate min-w-0"
      >
        Transaction
      </div>
      <div
        class="text-xs text-slate-400 truncate min-w-0"
      >
        Period 29 May - 3 July
      </div>
    </div>
    <div
      class="flex items-center justify-end gap-2"
    >
      <button
        aria-disabled="false"
        aria-label="Print"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-8 w-8 rounded-full"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-printer inline-flex items-center justify-center w-4 h-4 text-neutral"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"
          />
          <rect
            height="8"
            rx="1"
            width="12"
            x="6"
            y="14"
          />
        </svg>
      </button>
    </div>
  </header>
</DocumentFragment>
`;
